created not-found page

--- a/src/app/modules/shared/not-found/not-found.component.html
+++ b/src/app/modules/shared/not-found/not-found.component.html
@@ -1,1 +1,11 @@
-<p>not-found works!</p>
+
+
+<div class="container d-flex align-items-center m-auto">
+  <img src="https://i.pinimg.com/originals/b2/34/ae/b234ae71146c2252c74406ea4406610b.gif"/>
+  <div>
+    <h1>404</h1>
+    <h3>PAGE NOT FOUND</h3>
+    <button type="button" class="btn btn-outline-primary" >Homepage</button>
+  </div>
+</div>
+
