implemented not-found page

--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -1,1 +1,7 @@
-<p>navbar works!</p>
+
+<nav class="navbar navbar-light bg-light">
+  <div class="container-fluid d-flex justify-content-center">
+    <a class="navbar-brand" routerLink="user">Users</a>
+    <a class="navbar-brand" routerLink="order">Orders</a>
+  </div>
+</nav>
