--- a/src/app/modules/shared/not-found/not-found.component.html
+++ b/src/app/modules/shared/not-found/not-found.component.html
@@ -5,7 +5,7 @@
   <div>
     <h1>404</h1>
     <h3>PAGE NOT FOUND</h3>
-    <button type="button" class="btn btn-outline-primary" >Homepage</button>
+    <!-- <button type="button" class="btn btn-outline-primary" routerLink="user">Homepage</button> -->
   </div>
 </div>
 
