add mock and interface

--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid d-flex justify-content-center">
-    <a class="navbar-brand" routerLink="user">Users</a>
-    <a class="navbar-brand" routerLink="order">Orders</a>
+    <a class="navbar-brand" routerLink="user" routerLinkActive="active">Users</a>
+    <a class="navbar-brand" routerLink="order" routerLinkActive="active">Orders</a>
   </div>
 </nav>
