fixed user-single style

--- a/src/app/modules/core/user/user-list/user-list.component.html
+++ b/src/app/modules/core/user/user-list/user-list.component.html
@@ -1,5 +1,5 @@
 <ol>
-  <li *ngFor="let person of persons">
+  <li *ngFor="let person of persons" class="w-75">
     <app-user-single [person]="person"></app-user-single>
    </li>
  </ol>
