--- a/src/app/modules/shared/user-single/user-single.component.html
+++ b/src/app/modules/shared/user-single/user-single.component.html
@@ -10,4 +10,5 @@
   <strong>{{ person.name }} {{ person.surname }}</strong>
   {{ person.age }}
   {{ person.address.city }}
+  <button type="button" class="btn btn-primary btn-sm" (click)="deletedUser(person)">Rimuovi</button>
 </div>
