add ng-template in user-list

--- a/src/app/modules/core/user/user-list/user-list.component.html
+++ b/src/app/modules/core/user/user-list/user-list.component.html
@@ -1,5 +1,7 @@
-<ol>
+<ol *ngIf="persons.length > 0; else noPerson">
   <li *ngFor="let person of persons" class="w-75">
     <app-user-single [person]="person" (deleteUser)="onDeleteUser($event)"></app-user-single>
    </li>
  </ol>
+
+ <ng-template #noPerson>Non sono presenti utenti</ng-template>
