--- a/src/app/modules/core/user/user-container/user-container.component.html
+++ b/src/app/modules/core/user/user-container/user-container.component.html
@@ -1,6 +1,8 @@
 <div class="container-fluid d-flex h-100">
-  <div class="bg-success p-2 bg-opacity-25 w-75 text-dark text-center m-2 h-100"><app-user-list></app-user-list></div>
+  <div class="bg-success p-2 bg-opacity-25 w-75 text-dark text-center m-2 h-100">
+    <app-user-list (selectedElement)="selectUser($event)"></app-user-list>
+  </div>
   <div class="text-dark bg-warning bg-opacity-50 w-75 m-2 text-center h-100" *ngIf="selectedUser">
-    <app-user-detail [person]="selectedUser" (closedDetail)="closeDetail()"></app-user-detail>
+    <app-user-detail [person]="selectedUser" ></app-user-detail>
   </div>
 </div>
