--- a/src/app/modules/core/user/user-list/user-list.component.html
+++ b/src/app/modules/core/user/user-list/user-list.component.html
@@ -1,6 +1,6 @@
 <ol *ngIf="persons.length > 0; else noPerson">
   <li *ngFor="let person of persons" class="w-75">
-    <app-user-single [person]="person" (deleteUser)="onDeleteUser($event)"></app-user-single>
+    <app-user-single [person]="person" (deletedUser)="deleteUser($event)" (selectedElement)="selectedElement.emit($event)"></app-user-single>
    </li>
  </ol>
 
