fixed user-detail style

--- a/src/app/modules/core/user/user-detail/user-detail.component.html
+++ b/src/app/modules/core/user/user-detail/user-detail.component.html
@@ -1,4 +1,4 @@
-<div class="text-start">
+<div class="text-start p-5">
   <p>id: {{person.id}}</p>
   <p>Name: {{person.name}}</p>
   <p>Name: {{person.surname}}</p>
@@ -11,8 +11,8 @@
   <p>Role: {{person.role}}</p>
   <p>username: {{person.username}}</p>
   <img src="{{person.profilePhotoUrl}}" alt="">
-  <p>{{person.gender}}</p>
+  <p>Gender: {{person.gender}}</p>
 
-  <button>Chiudi</button>
+  <button class="btn btn-primary">Chiudi</button>
 
 </div>
