--- a/src/app/modules/core/user/user-detail/user-detail.component.html
+++ b/src/app/modules/core/user/user-detail/user-detail.component.html
@@ -13,6 +13,6 @@
   <img src="{{person.profilePhotoUrl}}" alt="">
   <p>Gender: {{person.gender}}</p>
 
-  <button class="btn btn-primary">Chiudi</button>
+  <button class="btn btn-primary" (click)="closeDetail()">Chiudi</button>
 
 </div>
