fixed not-found style

--- a/src/app/modules/shared/not-found/not-found.component.html
+++ b/src/app/modules/shared/not-found/not-found.component.html
@@ -4,8 +4,10 @@
   <img src="https://i.pinimg.com/originals/b2/34/ae/b234ae71146c2252c74406ea4406610b.gif"/>
   <div>
     <h1>404</h1>
-    <h3>PAGE NOT FOUND</h3>
-    <!-- <button type="button" class="btn btn-outline-primary" routerLink="user">Homepage</button> -->
+    <h2>PAGE NOT FOUND</h2>
+    <div class="p-3 mx-3">
+      <span>Torna alla </span><button type="button" class="btn btn-outline-primary" routerLink="">Homepage</button>
+    </div>
   </div>
 </div>
 
