--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-
+<div>
+  <div class="container">
+    <app-show-counter></app-show-counter>
+    <app-edit-counter></app-edit-counter>
+  </div>
+</div>
