--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,10 @@
-div{
- display: flex;
- justify-content: center;
- align-content: center;
-}
 
 .container{
+  width: fit-content;
+  border-radius: 15px;
   display: flex;
   flex-direction: column;
+  box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+  margin-top: 50px;
 }
 
