--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,22 +1,25 @@
 <div class="container-fluid">
-  <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg">
-   <option label='Nomi'></option>
-     <!-- <option value="1">One</option>
-    <option value="2">Two</option>
-    <option value="3">Three</option> -->
-    <option *ngFor="let beer of beerService.beers" value="2"></option>
-    <!-- {{beerService.getBeers()}} -->
-    <!-- {{beerService.beers.id}} -->
+  <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg" [(ngModel)]='name'>
+    <option selected disabled>Nome</option>
+    <option *ngFor="let beer of beers" value={{beer.name}}>{{beer.name}}</option>
   </select>
-  <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg">
-    <option selected>Tipi</option>
-    <option value="1">One</option>
-    <option value="2">Two</option>
-    <option value="3">Three</option>
+
+  <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg" [(ngModel)]='type'>
+    <option selected disabled>Tipi</option>
+    <option value="small">Small</option>
+    <option value="medium">Medium</option>
   </select>
-  <button type="submit">Search</button>
+  <button type="submit" (click)="selectBeer(name, type)">Search</button>
 </div>
 
-<!-- usare ngfor??? ciclo i nomi esistenti per creare un option -->
-<!-- two way binding? seleziono quello che mi interessa -->
-<!-- al click di submit devo stampare le birre richieste -->
+<div class="card flex-column justify-content-center align-items-center m-3">
+  <div *ngIf="selectedBeer; else noBeer" class="text-center">
+    <p>{{selectedBeer?.name}}</p>
+    <p>{{selectedBeer?.type}}</p>
+    <p>{{selectedBeer?.price | currency: 'EUR'}}</p>
+    </div>
+</div>
+
+<!-- aggiungo ng template, nel caso in cui non esiste la birra col type richiesto.
+   Altrimenti aggiungere entrambi i type per tutte le birre -->
+<ng-template #noBeer>Prodotto non disponibile. Prova con un altro formato!</ng-template>
