--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,35 +1,32 @@
-<!--
-  Se tolgo il commento dal tag form non funziona l'ngmodel, e di conseguenza il metodo del bottone.
-Ho provato a disabilitare il bottone aggiungendo [disabled]='form.invalid', ma non funziona :)
- -->
-
 <!-- FORM -->
-<!-- <form #form='ngForm'> -->
+<form #form='ngForm'>
 <div class="container mt-4">
-  <select class="form-select form-select-lg mb-3 form-control w-25" aria-label=".form-select-lg" [(ngModel)]='name' required>
+  <select class="form-select form-select-lg mb-3 form-control w-25" name="beerName" aria-label=".form-select-lg" [(ngModel)]='name' required>
     <option selected disabled>Nome</option>
     <option *ngFor="let beer of beers" value={{beer.name}}>{{beer.name}}</option>
   </select>
 
-  <select class="form-select form-select-lg mb-3 form-control  w-25" aria-label=".form-select-lg" [(ngModel)]='type' required>
+  <select class="form-select form-select-lg mb-3 form-control  w-25" aria-label=".form-select-lg" name="beerType" [(ngModel)]='type' required>
     <option selected disabled>Tipi</option>
     <option value="small">Small</option>
     <option value="medium">Medium</option>
   </select>
-  <button type="submit" (click)="selectBeer(name, type)" class="btn btn-primary">Search</button>
-<!-- </form> -->
+  <button [disabled]="form.invalid" type="submit" (click)="selectBeer(name, type)" class="btn btn-primary">Search</button>
+</div>
+</form>
 
 <!-- CARD BIRRA SELEZIONATA-->
-  <div *ngIf="selectedBeer" class="text-center">
+  <div *ngIf="selectedBeer" class="text-center container mt-4">
     <div class="card flex-column justify-content-center align-items-center m-3 w-25">
-      <h2>{{selectedBeer?.name}}</h2>
-      <p>Size: {{selectedBeer?.type}}</p>
-      <p>{{selectedBeer?.price | currency: 'EUR'}}</p>
+      <h2>{{selectedBeer.name}}</h2>
+      <p>Size: {{selectedBeer.type}}</p>
+      <p>{{selectedBeer.price | currency: 'EUR'}}</p>
     </div>
   </div>
+
+<!-- NG TEMPLATE -->
+
+<!-- <div *ngIf="!selectedBeer && form.valid" class="text-center container mt-4">
+  <p>Prodotto non disponibile. Prova con un altro formato!</p>
 </div>
-
-
-<!-- aggiungo ng template, nel caso in cui non esiste la birra col type richiesto.
-   Altrimenti aggiungere entrambi i type per tutte le birre -->
-<!-- <ng-template #noBeer>Prodotto non disponibile. Prova con un altro formato!</ng-template> -->
+-->
