--- a/src/app/modules/core/container/container.component.html
+++ b/src/app/modules/core/container/container.component.html
@@ -1,24 +1,29 @@
 <h1 class="text-center">Joke App</h1>
-
-<div class="card container">
-  <h2>Joke attuale</h2>
-  <p>  {{joke}}</p>
-  <div class="text-center">
-    <button (click)="like()">Like</button>
-    <button (click)="dislike()">Dislike</button>
+<div class="container">
+  <div class="card p-2 mt-4">
+    <h2 class="text-center">A new Joke every 5 seconds!</h2>
+    <p class="text-center">{{ joke }}</p>
+    <div class="text-center">
+      <button type="button" class="btn btn-outline-success mx-2" (click)="like()">Like</button>
+      <button type="button" class="btn btn-outline-danger mx-2" (click)="dislike()">Dislike</button>
+    </div>
   </div>
-</div>
 
-<div *ngIf="likedJokes.length > 0" class="d-flex flex-column">
-  <h2>Jokes liked</h2>
-  <ol>
-    <li *ngFor="let goodJoke of likedJokes">  {{goodJoke}} <button (click)="notLike(goodJoke)">Nope</button></li>
-  </ol>
-</div>
+  <div *ngIf="likedJokes.length > 0" class="d-flex flex-column card p-2 mt-4 border-success">
+    <h2>Jokes liked</h2>
+    <ol>
+      <li *ngFor="let goodJoke of likedJokes" class="py-2">
+        {{ goodJoke }} <button class="button" (click)="notLike(goodJoke)"><i class="far fa-thumbs-down fa-lg"></i></button>
+      </li>
+    </ol>
+  </div>
 
-<div *ngIf="disliked.length > 0">
-  <h2>Jokes not liked</h2>
-  <ol>
-    <li *ngFor="let badJoke of disliked">{{badJoke}}<button (click)="notDislike(badJoke)">Nope</button></li>
-  </ol>
+  <div *ngIf="disliked.length > 0" class="d-flex flex-column card p-2 mt-4 border-danger">
+    <h2>Jokes not liked</h2>
+    <ol>
+      <li *ngFor="let badJoke of disliked" class="py-2">
+        {{ badJoke }}<button class="button" (click)="notDislike(badJoke)"><i class="far fa-thumbs-up fa-lg"></i></button>
+      </li>
+    </ol>
+  </div>
 </div>
